// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getComponentCss() should return correct css for maxWidth: 20 and columns: { base: 4, s: 3, m: 2, l: 'auto' } 1`] = `
":host {
  display: grid !important;
  grid-auto-rows: 1fr !important;
  grid-template-columns: repeat(auto-fill, minmax(max(46px, calc((100% - calc(calc(4 - 1) * 6px)) / 4)), 1fr)) !important;
  gap: 6px !important;
}
:host([hidden]) {
  display: none !important;
}
@media(min-width:760px) {
  :host {
    grid-template-columns: repeat(auto-fill, minmax(max(46px, calc((100% - calc(calc(3 - 1) * 6px)) / 3)), 1fr)) !important;
  }
}

@media(min-width:1000px) {
  :host {
    grid-template-columns: repeat(auto-fill, minmax(max(46px, calc((100% - calc(calc(2 - 1) * 6px)) / 2)), 1fr)) !important;
  }
}

@media(min-width:1300px) {
  :host {
    grid-template-columns: repeat(auto-fit, 46px) !important;
  }
}
"
`;

exports[`getComponentCss() should return correct css for maxWidth: 20 and columns: auto 1`] = `
":host {
  display: grid !important;
  grid-auto-rows: 1fr !important;
  grid-template-columns: repeat(auto-fit, 46px) !important;
  gap: 6px !important;
}
:host([hidden]) {
  display: none !important;
}"
`;

exports[`getComponentCss() should return correct css for maxWidth: 80 and columns: 1 1`] = `
":host {
  display: grid !important;
  grid-auto-rows: 1fr !important;
  grid-template-columns: repeat(auto-fill, minmax(max(80px, calc((100% - calc(calc(1 - 1) * 6px)) / 1)), 1fr)) !important;
  gap: 6px !important;
}
:host([hidden]) {
  display: none !important;
}"
`;

exports[`getComponentCss() should return correct css for maxWidth: 230 and columns: 10 1`] = `
":host {
  display: grid !important;
  grid-auto-rows: 1fr !important;
  grid-template-columns: repeat(auto-fill, minmax(max(220px, calc((100% - calc(calc(10 - 1) * 6px)) / 10)), 1fr)) !important;
  gap: 6px !important;
}
:host([hidden]) {
  display: none !important;
}"
`;
